force-app/main/default/objects/Table__c/fields/Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Seating_Capacity__c</fullName>
    <description>It is used to store Seating Capacity</description>
    <label>Seating Capacity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>