force-app/main/default/objects/Table__c/fields/Table_Location__c.field-meta.xml
<CustomField>
    <fullName>Table_Location__c</fullName>
    <description>It is used to store Table Location</description>
    <label>Table Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>