force-app/main/default/objects/Table__c/fields/Table_Status__c.field-meta.xml
<CustomField>
    <fullName>Table_Status__c</fullName>
    <description>It is used to store Table Status</description>
    <label>Table Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>