force-app/main/default/objects/Table__c/listViews/Available_Tables.listView-meta.xml
<ListView>
    <fullName>Available_Tables</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Table_Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available Tables</label>
</ListView>