force-app/main/default/objects/Table__c/listViews/Reserved_Tables.listView-meta.xml
<ListView>
    <fullName>Reserved_Tables</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Table_Status__c</field>
        <operation>equals</operation>
        <value>Reserved</value>
    </filters>
    <label>Reserved Tables</label>
</ListView>